# cxms

./: .gitattributes  .gitignore  AGENTS.md  BENCHMARK_ANALYSIS.md  CLAUDE.md  Cargo.toml  ENGINE_CONSISTENCY_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_OPTIMIZATION_SUMMARY.md  LAYOUT_IMPROVEMENT_PROPOSAL.md  LICENSE  PERFORMANCE.md  PROFILING_ANALYSIS.md  RAYON_OPTIMIZATION_REPORT.md  RAYON_PERFORMANCE_ANALYSIS.md  RAYON_PERFORMANCE_OPTIMIZATION.md  README.md  RUNTIME_COMPARISON_REPORT.md  SMOL_BLOCKING_THREADS_OPTIMIZATION.md  SMOL_OPTIMIZATION_RESULTS.md  SMOL_PERFORMANCE_ANALYSIS.md  TOKIO_OPTIMIZATION_REPORT.md  TOKIO_PERFORMANCE_ANALYSIS.md  TOKIO_VS_SMOL_OVERHEAD_ANALYSIS.md  check_message.sh  compare_best_implementations.sh  compare_engines.sh  compare_real_data.sh  engine_comparison_analysis.md  final_performance_comparison.sh  optimize_hint.md  profile_heavy.sh  profile_tokio.sh  renovate.json5  spec.md  test_performance.sh  test_preview.sh  test_session_search.jsonl  test_simple.sh  test_v4_worker_pool.sh  (+1 more)
.claude/: settings.json
.claude/commands/: debug.md
.claude/hooks/: rust-check.js
.github/workflows/: ci.yml  codspeed.yml
benches/: async_benchmark.rs  component_benchmark.rs  engine_comparison_benchmark.rs  file_discovery_benchmark.rs  interactive_ui_benchmark.rs  large_file_benchmark.rs  rayon_search_benchmark.rs  rayon_vs_tokio_benchmark.rs  realistic_benchmark.rs  search_benchmark.rs  session_list_benchmark.rs  smol_benchmark.rs  smol_search_benchmark.rs  statistics_benchmark.rs
src/: lib.rs  main.rs  profiling.rs  profiling_enhanced.rs  stats.rs
src/convert/: claude_to_codex.rs  mod.rs
src/formatters/: claude_formatter.rs  mod.rs  tool_parser.rs
src/interactive_ratatui/: constants.rs  help_navigation_test.rs  help_overlay_test.rs  integration_tests.rs  mod.rs  session_preview_test.rs  session_view_integration_test.rs  tests.rs
src/interactive_ratatui/application/: cache_service.rs  cache_service_test.rs  mod.rs  search_service.rs  search_service_test.rs  session_service.rs  session_service_test.rs
src/interactive_ratatui/domain/: filter.rs  filter_test.rs  mod.rs  models.rs  models_test.rs  session_list_item.rs
src/interactive_ratatui/ui/: app_state.rs  app_state_test.rs  commands.rs  events.rs  mod.rs  navigation.rs  renderer.rs
src/interactive_ratatui/ui/components/: help_dialog.rs  list_item.rs  list_item_test.rs  list_viewer.rs  list_viewer_test.rs  message_detail.rs  message_detail_test.rs  message_preview.rs  message_preview_test.rs  mod.rs  result_list.rs  result_list_test.rs  search_bar.rs  search_bar_test.rs  session_list.rs  session_list_test.rs  session_preview.rs  session_preview_test.rs  session_viewer.rs  session_viewer_test.rs  session_viewer_unified.rs  tab_bar.rs  text_input.rs  text_input_test.rs  view_layout.rs  view_layout_test.rs
src/query/: condition.rs  fast_lowercase.rs  mod.rs  parser.rs  regex_cache.rs
src/schemas/: mod.rs  searchable_message.rs  session_message.rs  tool_result.rs
src/search/: async_engine.rs  context.rs  engine.rs  file_discovery.rs  mod.rs  optimized_async_engine.rs  optimized_async_engine_v2.rs  optimized_async_engine_v3.rs  optimized_async_engine_v4.rs  optimized_rayon_engine.rs  optimized_rayon_engine_v2.rs  optimized_rayon_engine_v3.rs  optimized_smol_engine.rs  rayon_engine.rs  smol_engine.rs
src/utils/: mod.rs  path_encoding.rs
