[package]
name = "ccms"
version = "0.0.1"
edition = "2024"
authors = ["CCMS CLI"]
description = "High-performance CLI for searching Claude session JSONL files"

[[bin]]
name = "ccms"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# JSON parsing with SIMD acceleration
sonic-rs = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and path handling
globset = "0.4"
jwalk = "0.8"
dirs = "6.0"

# Regex and string matching
regex = "1.10"
lru = "0.16"

# Parallel processing
crossbeam = "0.8"
rayon = "1.10"


# Error handling
anyhow = "1.0"

# Date/time handling
chrono = "0.4"
parse_datetime = "0.11"

# Query parsing
nom = "8.0"

# Colored output
colored = "3.0"

# TUI framework
ratatui = { version = "0.30.0-alpha.5", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"


# Profiling and tracing
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Smol runtime
smol = "2.0"
async-fs = "2.1"
futures-lite = "2.5"
blocking = "1.6"

# Signal handling
signal-hook = "0.3"

# Performance optimizations
num_cpus = "1.17"

# Custom allocator for performance
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
codspeed-criterion-compat = "=3.0.5"
tempfile = "=3.20.0"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "component_benchmark"
harness = false

[[bench]]
name = "large_file_benchmark"
harness = false

[[bench]]
name = "interactive_ui_benchmark"
harness = false

[[bench]]
name = "async_benchmark"
harness = false

[[bench]]
name = "smol_benchmark"
harness = false

[[bench]]
name = "rayon_search_benchmark"
harness = false

[[bench]]
name = "smol_search_benchmark"
harness = false

[[bench]]
name = "engine_comparison_benchmark"
harness = false


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true  # Enable debug symbols for better profiling

[features]
default = ["mimalloc"]
profiling = ["pprof"]
mimalloc = ["dep:mimalloc"]
